Integrated Rick's suggestions'

--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@
 This thesis introduces a two-stream model for dynamic texture synthesis.
 The model is based on pre-trained convolutional networks (ConvNets)
 that target two independent tasks: (i) object recognition, and (ii)
-optical flow prediction.
+optical flow \edit{prediction}{estimation}.
 Given an input dynamic texture, statistics
 of filter responses from the object recognition ConvNet
 encapsulate the per-frame appearance of the input texture, while
