--- a/sup_tables.tex
+++ b/sup_tables.tex
@@ -37,7 +37,7 @@
 	{tables/all_textures_concat_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Per-texture accuracies averaged over exposure times, using the concatenation layer]{Per-texture accuracies averaged over exposure times, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Per-texture accuracies using the concatenation layer]{Per-texture accuracies using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_concat}
 \end{table*}
 
@@ -105,7 +105,7 @@
 	{tables/all_textures_flowdecode_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Per-texture accuracies averaged over exposure times, using the flow decode layer]{Per-texture accuracies averaged over exposure times, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Per-texture accuracies using the flow decode layer]{Per-texture accuracies using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_flowdecode}
 \end{table*}
 
@@ -174,7 +174,7 @@
 	{tables/appearance_grouping_concat_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Accuracies of textures grouped by appearances, averaged over exposure times, using the concatenation layer]{Accuracies of textures grouped by appearances, averaged over exposure times, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Accuracies of textures grouped by appearances, using the concatenation layer]{Accuracies of textures grouped by appearances, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_concat_app}
 \end{table*}
 
@@ -240,7 +240,7 @@
 	{tables/appearance_grouping_flowdecode_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Accuracies of textures grouped by appearances, averaged over exposure times, using the flow decode layer]{Accuracies of textures grouped by appearances, averaged over exposure times, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Accuracies of textures grouped by appearances, using the flow decode layer]{Accuracies of textures grouped by appearances, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_flowdecode_app}
 \end{table*}
 
@@ -310,7 +310,7 @@
 	{tables/dynamics_grouping_concat_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Accuracies of textures grouped by dynamics, averaged over exposure times, using the concatenation layer]{Accuracies of textures grouped by dynamics, averaged over exposure times, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Accuracies of textures grouped by dynamics, using the concatenation layer]{Accuracies of textures grouped by dynamics, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_concat_dyn}
 \end{table*}
 
@@ -376,7 +376,7 @@
 	{tables/dynamics_grouping_flowdecode_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Accuracies of textures grouped by dynamics, averaged over exposure times, using the flow decode layer]{Accuracies of textures grouped by dynamics, averaged over exposure times, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Accuracies of textures grouped by dynamics, using the flow decode layer]{Accuracies of textures grouped by dynamics, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_flowdecode_dyn}
 \end{table*}
 
@@ -446,7 +446,7 @@
 	{tables/all_textures_avg_concat_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Average accuracy over all textures, averaged over exposure times, using the concatenation layer]{Average accuracy over all textures, averaged over exposure times, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Average accuracy over all textures, using the concatenation layer]{Average accuracy over all textures, using the concatenation layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_concat_all}
 \end{table*}
 
@@ -512,7 +512,7 @@
 	{tables/all_textures_avg_flowdecode_4800.csv}{Accuracy=\Accuracy}%
 	{\Accuracy}%
 	}
-	\caption[Average accuracy over all textures, averaged over exposure times, using the flow decode layer]{Average accuracy over all textures, averaged over exposure times, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
+	\caption[Average accuracy over all textures, using the flow decode layer]{Average accuracy over all textures, using the flow decode layer. Each texture accuracy includes a margin of error with a $95\%$ statistical confidence.}
 	\label{tab:table_flowdecode_all}
 \end{table*}
 
