--- a/thesis-short.bib
+++ b/thesis-short.bib
@@ -19,6 +19,9 @@
 @STRING( T-VCG = "IEEE Transactions on Visualization and Computer Graphics (T-VCG)"
 )
 
+@STRING( TOG = "ACM Transactions on Graphics (TOG)"
+)
+
 @STRING( ACCV = "ACCV"
 )
 
@@ -62,6 +65,9 @@
 )
 
 @STRING( NIPS = "Conference on Neural Information Processing Systems (NIPS)"
+)
+
+@STRING( NIPSW = "Conference on Neural Information Processing Systems (NIPS) Workshops"
 )
 
 @STRING( JMIV = "Journal of Mathematical Imaging and Vision"
