--- a/thesis.bib
+++ b/thesis.bib
@@ -9,11 +9,40 @@
   year      = {2017}
 }
 
-@article{gibson1950perception,
+@book{gibson1950perception,
   title		= {The Perception of the Visual World},
   author	= {James J. Gibson},
   year		= {1950},
-  publisher	= {Houghton Mifflin}
+  publisher	= {Houghton Mifflin},
+  address = {Oxford, England}
+}
+
+@inproceedings{adelson2001,
+  title = {On seeing stuff: the perception of materials by humans and machines},
+  author = {Adelson, Edward H.},
+  booktitle = {Human Vision and Electronic Imaging VI},
+  volume = {4299},
+  pages = {1--13},
+  year = {2001}
+}
+
+@article{dana1999,
+  title = {Reflectance and texture of real-world surfaces},
+  author = {Dana, Kristin J. and Van Ginneken, Bram and Nayar, Shree K. and Koenderink, Jan J.},
+  journal = TOG,
+  volume = {18},
+  number = {1},
+  pages = {1--34},
+  year = {1999}
+}
+
+@article{nayar1991,
+  title = {Surface reflection: physical and geometrical perspectives},
+  author = {Nayar, Shree K. and Ikeuchi, Katsushi and Kanade, Takeo},
+  journal = PAMI,
+  number = {7},
+  pages = {611--634},
+  year = {1991}
 }
 
 @inproceedings{tesfaldet2018,
@@ -23,6 +52,32 @@
   year 		= {2018}
 }
 
+@article{hadji2018,
+  author = {Isma Hadji and Richard P. Wildes},
+  title = {What do we understand about convolutional networks?},
+  year = {2018},
+  journal = {arXiv:1803.08834}
+}
+
+@article{arsigny2006,
+  title = {Log-Euclidean metrics for fast and simple calculus on diffusion tensors},
+  author = {Arsigny, Vincent and Fillard, Pierre and Pennec, Xavier and Ayache, Nicholas},
+  journal = {Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
+  volume = {56},
+  number = {2},
+  pages = {411--421},
+  year = {2006},
+  publisher = {Wiley Online Library}
+}
+
+@inproceedings{lecun1998,
+ author = {LeCun, Yann and Bottou, L{\'e}on and Orr, Genevieve B. and M\"{u}ller, Klaus-Robert},
+ title = {Efficient BackProp},
+ booktitle = NIPSW,
+ year = {1998},
+ pages = {9--50}
+}
+
 @article{peteri2010,
   author = {Renaud P\'eteri and S\'{a}ndor Fazekas  and Mark J. Huiskes},
   title = {{D}yn{T}ex: {A} {C}omprehensive {D}atabase of {D}ynamic {T}extures},
@@ -30,6 +85,14 @@
   volume = {31},
   number = {12},
   year = {2010}
+}
+
+@book{goodfellow2016,
+    title = {Deep Learning},
+    author = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher = {MIT Press},
+    note = {\url{http://www.deeplearningbook.org}},
+    year = {2016}
 }
 
 @inproceedings{movshon2014,
@@ -359,7 +422,7 @@ static scenes},
 
 @article {nishimoto2011,
 	author = {Nishimoto, Shinji and Gallant, Jack L.},
-	title = {A Three-Dimensional Spatiotemporal Receptive Field Model Explains Responses of Area MT Neurons to Naturalistic Movies},
+	title = {A Three-Dimensional Spatiotemporal Receptive Field Model Explains Responses of Area {MT} Neurons to Naturalistic Movies},
 	volume = {31},
 	number = {41},
 	pages = {14551--14564},
@@ -507,11 +570,11 @@ year = "1998"
   year      = {2016}
 }
 
-@article{simonyan2014very,
+@inproceedings{simonyan2014very,
   title     = {Very deep convolutional networks for large-scale image recognition},
   author    = {Simonyan, Karen and Zisserman, Andrew},
-  journal   = {arXiv:1409.1556},
-  year      = {2014}
+  booktitle   = ICLR,
+  year      = {2015}
 }
 
 @article{adelson1985spatiotemporal,
@@ -698,7 +761,7 @@ pages    = {265--283}
   year = {2012}
 }
 
-@book{derpanis2010role,
+@phdthesis{derpanis2010role,
   title = {On the Role of Representation in the Analysis of Visual Spacetime},
   author = {Derpanis, Konstantinos G.},
   publisher = {York University},
