--- a/thesis.tex
+++ b/thesis.tex
@@ -54,6 +54,12 @@
 \usepackage{xcolor}
 \DeclareRobustCommand\todomatthew[1]{\textcolor{red}{\Todo[Matthew]{#1}}}
 
+% for highlighting text
+\DeclareRobustCommand\highlight[1]{\textcolor{red}{#1}}
+
+% for showing crossed-out text
+\newcommand\edit[2]{\sout{#1}\textcolor{red}{#2}}
+
 % include abstract in table of contents
 \patchcmd{\abstract}{\titlepage}{%
   \titlepage
